@@ -15,6 +15,10 @@ git-annex (5.20140321) UNRELEASED; urgency=medium
   * forget --drop-dead: Avoid removing the dead remote from the trust.log,
     so that if git remotes for it still exist anywhere, git annex info
     will still know it's dead and not show it.
+  * git-annex-shell: Make configlist automatically initialize
+    a remote git repository, as long as a git-annex branch has
+    been pushed to it, to simplify setup of remote git repositories,
+    including via gitolite.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 21 Mar 2014 14:08:41 -0400
 
